Update, some changes, new box trailer

--- a/index_krabansky.html
+++ b/index_krabansky.html
@@ -36,7 +36,7 @@
         <div class="firstBlock">
             <div class="firstBlock-text">
                 <h1>Bienvenue sur mon Site Web !</h1>
-                <p>Crée par KRABANSKY Gaston - 2024</p>
+                <p>Créé par KRABANSKY Gaston - 2024</p>
 
 
                 <button class="button" onclick="redirectButton('pages/presentation_krabansky.html')">Présentation</button>
@@ -55,8 +55,8 @@
             <div class="secondBlock-text">
                 <h1>C'est quoi Minecraft ?</h1>
                 <p>Minecraft est un jeu vidéo de type aventure bac à sable ("Sandbox" en anglais).<br>
-                    Originalement crée ainsi que développé par Markus Person, (alias Notch) puis par la société Mojang Studios.<br>
-                    Minecraft est finalement sortie 2 ans et demi après sa création, le 18 novembre 2011.
+                    Originalement créé ainsi que développé par Markus Person, (alias Notch) puis par la société Mojang Studios.<br>
+                    Minecraft est finalement sorti 2 ans et demi après sa création, le 18 novembre 2011.
                 </p>
                 <h3>Pour en découvrir plus sur le jeu, <a href="pages/presentation_krabansky.html">cliquez ici</a>.</h3>
             </div>
@@ -64,8 +64,8 @@
 
         <div class="thirdBlock">
             <div class="secondBlock-text">
-                <h2>Écoutez dès maintenant la douce musique de ce jeu apaisant...</h2>
-                <p>Cliquez sur le bouton afin de mettre en route/pause la douce mélodie.</p>
+                <h2>Écoutez, dès maintenant la douce musique de ce jeu apaisant...</h2>
+                <p>Cliquez sur le bouton afin de mettre en route / en pause cette douce mélodie.</p>
 
                 <button id="audioButton" class="button" onclick="toggleAudio()"><i class="bi bi-play"></i></button>
             </div>
