--- a/pages/presentation_krabansky.html
+++ b/pages/presentation_krabansky.html
@@ -31,14 +31,14 @@
 
                 <p>
                     Depuis plus de 10 ans maintenant, le jeu est en constante évolution. En publiant des<br>
-                    mises à jour chaque année, le jeu vidéo Minecraft est disponible sur une très grande quantité<br>
-                    de supports, en passant du téléphone ou de l'ordinateur, jusqu'à la console de jeu.<br>
+                    mise à jour chaque année, le jeu vidéo Minecraft est disponible sur une très grande quantité<br>
+                    de supports, en passant du téléphone ou de l'ordinateur, jusqu'à la console de jeux.<br>
                     <br>
                     De plus, en mai 2020, Minecraft passe la barre des 200 millions d'exemplaires vendus pour<br>
-                    tous ses plateformes, puis en 2023, celle des 300 millions, ce qui en fait le jeu vidéo le plus<br>
-                    vendu de tous les temps avec une communauté de près de 126 millions de joueurs actif en mai 2020.<br>
+                    toutes ses plateformes, puis en 2023, celle des 300 millions, ce qui en fait le jeu vidéo le plus<br>
+                    vendu de tous les temps avec une communauté de près de 126 millions de joueurs actifs en mai 2020.<br>
                     <br>
-                    Finalement aujourd'hui, Minecraft pourrait être considéré comme une légende des jeux vidéo,<br>
+                    Finalement aujourd'hui, Minecraft pourrait être considéré comme une légende des jeux vidéos,<br>
                     puisqu'il est toujours aussi présent chez les joueurs d'aujourd'hui, et presque autant apprécié<br>
                     malgré une baisse en termes de nombre de joueurs actifs mensuellement.
                 </p>
@@ -50,29 +50,48 @@
         </div>
 
 
-        <div class="secondBlock">
+        <div id ="comment-ce-jeu-se-joue-il" class="secondBlock">
 
             <img class="icon" src="../images/game-controller-icon.png" alt="game-controller">
 
             <div class="secondBlock-text">
-                <h1 id ="comment-ce-jeu-se-joue-il"><i class="bi bi-patch-question-fill"></i> Comment ce jeu se joue-il ?</h1>
+                <h1 ><i class="bi bi-patch-question-fill"></i> Comment ce jeu se joue-t-il ?</h1>
 
-                <p>Le concept du jeu est plutôt simple. Vous incarnez un personnage qui se retrouve dans un universe<br>
-                    nouveau, votre objectif, survire, construire et gagner. Pour les nouveaux joueurs, votre objectif<br>
-                    est simple mais pas facile. Pour terminer le jeu, vous devez tuer un dragon plutôt imposant.<br>
+                <p>Le concept du jeu est plutôt simple. Vous incarnez un personnage qui se retrouve dans un univers<br>
+                    nouveau, votre objectif, survivre, construire et gagner. Pour les nouveaux joueurs, votre objectif<br>
+                    est simple, mais pas facile. Pour terminer le jeu, vous devez tuer un dragon plutôt imposant.<br>
                     <br>
                     Durant votre aventure, vous devrez récolter différentes ressources afin de vous équiper, vous protéger<br>
-                    et même de vous défendre faces aux autres créatures qui pourraient venir vous attaquer pendant que vous<br>
+                    et même de vous défendre face aux autres créatures qui pourraient venir vous attaquer pendant que vous<br>
                     essayez de dormir ! En traversant les paysages inoubliables, vous aurez l'occasion de rencontrer des<br>
                     structures abandonnées, des temps, des épaves, ou encore des villages habités !<br>
                 </p>
 
-                <button class="button" onclick="redirectButton('gallery_krabansky.html')">Galerie des Paysages <i class="bi bi-arrow-right-circle"></i></button>
+                <button class="button" onclick="redirectButton('#bande-annonce')">Notion suivante <i class="bi bi-arrow-right-circle"></i></button>
             </div>
 
             <img class="tinyIcon" src="../images/ender-dragon.gif" alt="ender-dragon">
         </div>
 
+        <div id ="bande-annonce" class="thirdBlock">
+            <div class="thirdBlock-text">
+                <h1><i class="bi bi-play-btn-fill"></i> Bande annonce du jeu</h1>
+                <p>Vous retrouvez juste ici à votre gauche une bande annonce officielle de Minecraft.<br>
+                    C'est vrai qu'elle est un peu ancienne, mais elle est surtout nostalgique !<br>
+                    Bon visionnage !<br>
+                </p>
+
+                <button class="button" onclick="redirectButton('gallery_krabansky.html')">Galerie des Paysages <i class="bi bi-arrow-right-circle"></i></button>
+            </div>
+
+            <iframe width="700"
+                    height="400"
+                    src="https://www.youtube.com/embed/MmB9b5njVbA"
+                    title="Official Minecraft Trailer" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen>
+            </iframe>
+        </div>
 
     </body>
 </html>
