--- a/pages/review_krabansky.html
+++ b/pages/review_krabansky.html
@@ -29,7 +29,7 @@
             <div class="firstBlock-text">
                 <h1>Avis</h1>
 
-                <p>N'hésitez pas à donner votre avis pour ce site web ! En vous remerciant pour notre visite !</p>
+                <p>N'hésitez pas à donner votre avis pour ce site web ! En vous remerciant pour votre visite !</p>
 
                 <button class="button" onclick="redirectButton('../index_krabansky.html')">Page d'accueil</button>
             </div>
