Updated index.html file path

--- a/pages/credits_krabansky.html
+++ b/pages/credits_krabansky.html
@@ -47,7 +47,7 @@
 
                 <br><br>
 
-                <button class="button" onclick="redirectButton('../index_krabansky.html')">Page d'accueil</button>
+                <button class="button" onclick="redirectButton('../index.html')">Page d'accueil</button>
             </div>
 
             <img class="icon" src="../images/credits-icon.png" alt="credits-icon">
