--- a/pages/gallery_krabansky.html
+++ b/pages/gallery_krabansky.html
@@ -32,7 +32,7 @@
                         <i class="bi bi-exclamation-triangle"></i> Attention <i class="bi bi-exclamation-triangle"></i><br>
                         Le bloc de TNT est extrêmement réactif, ne pas cliquer dessus !
                     </p>
-                    <button class="button" onclick="redirectButton('../index_krabansky.html')">Page d'accueil</button>
+                    <button class="button" onclick="redirectButton('../index.html')">Page d'accueil</button>
                 </div>
 
                 <img id="specialTnt" src="../images/tnt.png" alt="tnt" onClick="makeExplosion()">
@@ -57,7 +57,7 @@
 
         <div id="explosionBox">
             <h1 id="text">Bravo ! Une très jolie explosion !</h1>
-            <button class="button" id="button" onclick="redirectButton('../index_krabansky.html')">Retour à l'accueil</button>
+            <button class="button" id="button" onclick="redirectButton('../index.html')">Retour à l'accueil</button>
         </div>
 
     </body>
