--- a/pages/review_krabansky.html
+++ b/pages/review_krabansky.html
@@ -31,7 +31,7 @@
 
                 <p>N'hésitez pas à donner votre avis pour ce site web ! En vous remerciant pour votre visite !</p>
 
-                <button class="button" onclick="redirectButton('../index_krabansky.html')">Page d'accueil</button>
+                <button class="button" onclick="redirectButton('../index.html')">Page d'accueil</button>
             </div>
 
             <img class="icon" src="../images/review-icon.png" alt="review-icon">
